CSS: let tabs in code blocks render as 4 positions
Per devmanual, in ebuild files only tabs must be used for indentation,
and each tab represents four spaces. However, many snippets of ebuild
code in devmanual use spaces for indentation, making these snippets not
immediately usable for pasting. Snippets indented with tabs, while
technically conformant, look the wrong way.

This change makes tabs-indented snippets look right, making it more
attractive for contributors to use tabs for indentation, and paving the
road for potential conversion of spaces-indented snippets to tabs.

Acked-by: Gokturk Yuksek <gokturk@gentoo.org>

--- a/devmanual.css
+++ b/devmanual.css
@@ -154,6 +154,9 @@ div.figure, div.figure p {
 
 code, pre, tt {
     font-family: monospace;
+    tab-size: 4;
+    -o-tab-size: 4;
+    -moz-tab-size: 4;
 }
 
 blockquote.epigraph p {
